header img and nav bar complete

--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
 
 </head>
 
-<body>
     <div class="container">
+        <div class="header1">
+            <nav>
+                <img class="imglogo" src="img/lambda-black.png" alt="lambda">
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
+
+        <img class="img1" src="img/jumbo.jpg" alt="strategy">
+
+<body>
    
+ 
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
