--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
         </div>
 
-        <img class="img1" src="img/jumbo.jpg" alt="strategy">
+        <img class="img1" src="img/jumbo.jpg" alt="headimg1">
 
 <body>
    
