--- a/about.html
+++ b/about.html
@@ -26,11 +26,12 @@
 
 
 <body>
-    <div class="container about-page">
-     
-         About
+    <div class="container-about-page">
+      <div class="aboutdiv">
+         <h2>About</h2>
 
-          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+          <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+      </div>
 
       <div class ="middle-content">
           <div class="bbox bbox1">
@@ -77,11 +78,12 @@
           </div>
       </div>
 
+      <div class="workdiv">
+         <h2>Let's Work Together</h2>
 
-    Let's Work Together
+         <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+      </div>
 
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-        
       <footer>
         <nav>
           <a href="index.html">Home</a>
