finished all reqs

--- a/about.html
+++ b/about.html
@@ -26,14 +26,14 @@
 
 
 <body>
-    <div class="container-about-page">
+    <div class="container">
       <div class="aboutdiv">
          <h2>About</h2>
 
           <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
       </div>
 
-      <div class ="middle-content">
+      <div class ="middle-content2">
           <div class="bbox bbox1">
           
           <img src="img/about-plan.png" alt="strategy">
